[package]
name = "naia-server-socket"
version = "0.7.0-alpha.1"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
description = "An abstraction to provide a common API over either a UDP socket or a service that can establish WebRTC connections"
documentation = "https://docs.rs/naia-server-socket"
homepage = "https://github.com/naia-rs/naia-socket"
repository = "https://github.com/naia-rs/naia-socket"
readme = "../README.md"
keywords = ["webrtc", "udp", "server", "gamedev", "networking"]
license = "MIT OR Apache-2.0"
categories = ["network-programming", "game-development", "wasm", "web-programming"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
features = [ "use-webrtc" ]

[features]
use-udp = [ ]
use-webrtc = [ "webrtc-unreliable", "async-dup", "http", "futures-core" ]

[dependencies]
naia-socket-shared = { path = "../shared", version = "=0.7.0-alpha.1" }
log = { version = "0.4" }
cfg-if = { version = "0.1.10" }
async-io = { version = "1.1" }
async-trait = { version = "0.1.36" }
futures-channel = { version = "0.3", features = ["sink"] }
futures-util = { version = "0.3", features = ["sink"] }
smol = { version = "1.2.4" }
crossbeam = { version = "0.8" }
once_cell = { version = "1.4.1" }
futures-lite = { version = "1.11.0" }
futures-core = { version = "0.3", optional = true }
webrtc-unreliable = { version = "0.5.1", optional = true }
async-dup = { version = "1.2.2", optional = true }
http = { version = "0.2", optional = true }