[package]
name = "naia-socket-shared"
version = "0.7.0-alpha.1"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
description = "Common data types shared between naia-server-socket & naia-client-socket crates"
documentation = "https://docs.rs/naia-socket-shared"
homepage = "https://github.com/naia-rs/naia-socket"
repository = "https://github.com/naia-rs/naia-socket"
readme = "../README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
wbindgen = [ "wasm-bindgen", "js-sys" ]
mquad = [ ]

[dependencies]
byteorder = "1.3"
cfg-if = "0.1.10"
local_ipaddress = "0.1.3"
log = "0.4"
wasm-bindgen = { version = "0.2.45", optional = true }
js-sys = { version = "0.3", optional = true }
send_wrapper = { version = "0.5.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8.4" }
