[package]
name = "naia-server-socket-demo"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
version = "0.0.0"
workspace = "../../"
publish = false
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
use-udp = [ "naia-server-socket/use-udp" ]
use-webrtc = [ "naia-server-socket/use-webrtc" ]

[dependencies]
naia-server-socket = { path = "../../server" }
naia-socket-demo-shared = { path = "../shared" }
log = "0.4"
simple_logger = { version = "1.4" }