[package]
name = "naia-socket-client-demo-app"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
publish = false
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
multithread = [ "naia-client-socket/multithread" ]
mquad = [ "naia-client-socket/mquad", "miniquad" ]
wbindgen = [ "naia-client-socket/wbindgen" ]

[dependencies]
cfg-if = "0.1.10"
naia-client-socket = { path = "../../../client" }
log = "0.4"
miniquad = { version = "=0.3.0-alpha.28", features = ["log-impl"], optional = true }