[package]
name = "naia-socket-client-demo-mq"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "naia-socket-client-demo-mq"
path = "src/main.rs"

[features]

[dependencies]
naia-socket-client-demo-app = { path = "../app", features = [ "mquad" ] }
miniquad = { version = "=0.3.0-alpha.28", features = ["log-impl"] }